[gd_scene load_steps=4 format=3 uid="uid://player001"]

[ext_resource type="Script" path="res://scripts/player/player.gd" id="1_player"]

[sub_resource type="CircleShape2D" id="CircleShape2D_player"]
radius = 16.0

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_player"]
size = Vector2(32, 32)

[node name="Player" type="CharacterBody2D"]
collision_layer = 1
collision_mask = 6
script = ExtResource("1_player")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("PlaceholderTexture2D_player")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_player")

[node name="Muzzle" type="Marker2D" parent="."]
position = Vector2(20, 0)

[node name="FireRateTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="InvincibilityTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="HitFlashTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(1.5, 1.5)
